tests/sources/invalid/known_issues/expression_operand_errors.fire
//@ skip: parser error-recovery positions for this file's cascading diagnostics shift between compiles once any //~ annotation is inserted (discovered during the v2 harness migration); needs a compiler-side recovery fix before re-enabling under the //~ annotation system
// Missing right-hand operands and malformed primary expressions.
int32 a = 1 || ;
int32 b = 1 && ;
int32 c = 5 as ;
int32 d = 1 == ;
int32 e = 1 + ;
int32 f = 2 * ;
int32 g = 2 ** ;
int32 h = -;
int32 i = new;
